Fixed cards margin bottom issue due to gap not applied correctly on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,11 @@ body::before { content: ''; position: absolute; z-index: -1; top: 0; left: 0; ri
 
 @media screen and (max-width: 1050px) { .followersCardsList { -ms-grid-columns: (1fr)[2]; grid-template-columns: repeat(2, 1fr); gap: 1rem; } }
 
-@media screen and (max-width: 550px) { .followersCardsList { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; } }
+@media screen and (max-width: 550px) { .followersCardsList { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; gap: 0; } }
 
 .followersCard { background-color: var(--card-bg); color: var(--muted-text); overflow: hidden; border-radius: var(--borders); }
+
+@media screen and (max-width: 550px) { .followersCard { margin-bottom: 1rem; } }
 
 .followersCard .topBar { height: 4px; background-color: var(--card-bg); }
 
@@ -98,9 +100,11 @@ body::before { content: ''; position: absolute; z-index: -1; top: 0; left: 0; ri
 
 @media screen and (max-width: 1050px) { .dailyOverview .cardsList { -ms-grid-columns: (1fr)[2]; grid-template-columns: repeat(2, 1fr); gap: 1rem; } }
 
-@media screen and (max-width: 550px) { .dailyOverview .cardsList { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; } }
+@media screen and (max-width: 550px) { .dailyOverview .cardsList { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; gap: 0; } }
 
 .overviewCard { background-color: var(--card-bg); border-radius: var(--borders); padding: 1.5rem; }
+
+@media screen and (max-width: 550px) { .overviewCard { margin-bottom: 1rem; } }
 
 .overviewCard .first-row, .overviewCard .second-row { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -ms-flex-line-pack: center; align-content: center; }
 
