--- a/src/components-styles/_DailyOverview.scss
+++ b/src/components-styles/_DailyOverview.scss
@@ -22,6 +22,7 @@
     @media screen and (max-width: 550px) {
       display: flex;
       flex-flow: column nowrap;
+      gap: 0;
     }
   }
 }
